feat: implement appointments page
