# src/DentalClinic.WebApi/Models/Appointments/GetAppointmentResponseItemProvidedService.cs
@@ -4,4 +4,5 @@ public sealed record GetAppointmentResponseItemProvidedService
 {
     public required Guid Id { get; init; }
     public required string Name { get; init; }
+    public required decimal Price { get; init; }
 }
