# src/DentalClinic.WebApi/openapi.json
@@ -1965,7 +1965,8 @@
       "GetAppointmentResponseItemProvidedService": {
         "required": [
           "id",
-          "name"
+          "name",
+          "price"
         ],
         "type": "object",
         "properties": {
@@ -1975,6 +1976,10 @@
           },
           "name": {
             "type": "string"
+          },
+          "price": {
+            "type": "number",
+            "format": "double"
           }
         }
       },
